--- a/homepage.html
+++ b/homepage.html
@@ -30,9 +30,9 @@
                             </nav>
                             <!-- <a href="cart.html"><img src="images/cart.png" width="50px" height="50px"></a> -->
 
-
-
-                                <i class="fa fa-search" with-area="true"></i>
+                            <div class="main">
+                                <input type="text" name="box" placeholder="search">
+                            </div>
                    
                            
 
