--- a/products.html
+++ b/products.html
@@ -18,12 +18,14 @@
             <img src="./images/logo.png" class="logo" alt="">
             <nav>
                 <ul>
-                    <li><a href="home-page.html" class="right">Home</a></li>
+                    <li><a href="homepage.html" class="right">Home</a></li>
                     <li><a href="products.html">Products</a></li>
                     <li><a href="">About us</a></li>
                     <li><a href="">Contact us</a></li>
                     <li><a href="">Acount</a></li>
                 </ul>
+                <input type="text" name="box" placeholder="search">
+                <a href="#"><i class="fa fa-search"></i></a>
             </nav>
         </div>
     </div>
