--- a/account.html
+++ b/account.html
@@ -21,14 +21,15 @@
             </div>
             <nav>
                 <ul id="MenuItems">
-                    <li><a href="home-page.html">Home</a></li>
+                    <li><a href="homepage.html">Home</a></li>
                     <li><a href="products.html">Products</a></li>
                     <li><a href="">About</a></li>
                     <li><a href="">content</a></li>
                     <li><a href="">Account</a></li>
                 </ul>
+                <input type="text" name="box" placeholder="search">
+                                <a href="#"><i class="fa fa-search"></i></a>
             </nav>
-            <img src="images/cart.png" width="50px" height="50px">
             <img src="images/menu.png" class="menu-icon" 
             onclick="menutoggle()">
         </div>
