--- a/cart.html
+++ b/cart.html
@@ -91,11 +91,11 @@
         var MenuItems = document.getElementById("MenuItems");
         MenuItems.style.maxHeight = "0px";
         function menutoggle(){
-            if(MenuItems.style.maxHeight == "0px");{
+            if(MenuItems.style.maxHeight == "0px"){
             MenuItems.style.maxHeight ="200px";
         }
-            else {
-                MenuItems.style.maxHeight = 0px;
+            else{
+                MenuItems.style.maxHeight = "0px";
             }
         }
     </script>
